# util_df

./: CMakeLists.txt  README.md  build.sh
examples/: Test.cpp
examples/input/: data.json
include/: CSVManager.hh  FourierTransform.hh  JSONManager.hh  Material.hh  MovingAverage.hh  TemperatureSensor.hh  UtilDFAlgorithm.hh  UtilDFConstants.hh  UtilDFFunc.hh  UtilDFGraph.hh  UtilDFHistogram.hh  UtilDFImport.hh  UtilDFMath.hh  UtilDFRadiation.hh  UtilDFUnits.hh  UtilDF_LinkDef.hh
src/: CSVManager.cpp  FourierTransform.cpp  JSONManager.cpp  TemperatureSensor.cpp  UtilDFEnergyLoss.cpp  UtilDFFunc.cpp  UtilDFGraph.cpp  UtilDFHistogram.cpp  UtilDFMath.cpp  UtilDFRadiation.cpp
